--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,5 @@
 @import url("./pages/contact.css");
 @import url("./pages/home.css");
 @import url("./state/container.css");
+@import url("./pages/portfolio.css");
+@import url("./pages/projects.css");
